# bonacchilab.github.io

./: .gitignore  404.html  README.md  _config.yaml  _config.yml  hello.py  index.html  mkdocs.yml  mkdocs_old.yml  pyproject.toml  requirements.txt  sitemap.xml
assets/images/: index.html
contact/: index.html
css/: extra.css
docs/: contact.md  getting-started.md  index.md  join.md  news.md  publications.md  research.md  resources.md  team.md  website-guide.md
docs/assets/images/: README.md
docs/css/: extra.css
docs/other/: ispa.md  wjcr.md
join/: index.html
news/: index.html
other/ispa/: index.html
other/wjcr/: index.html
publications/: index.html
research/: index.html
resources/: index.html
search/: search_index.json
team/: index.html
tests/: test_hello.py
website-guide/: index.html
