[project]
name = "bonacchilab-github-io"
version = "0.1.0"
description = "Webpage for the Bonacchi Lab at WJCR"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.13",
    "mkdocs-material-extensions>=1.3.1",
    "pymdown-extensions==10.7",
    "mkdocs-include-markdown-plugin>=4.0.0",
]
